<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEvent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/addEvent_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="date|textPersonName"
                android:hint="@string/addEvent_eventTitle"
                app:layout_constraintBottom_toTopOf="@+id/addEvent_allDay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/addEvent_allDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addEvent_allDay"
                app:layout_constraintEnd_toEndOf="@+id/addEvent_title"
                app:layout_constraintStart_toStartOf="@+id/addEvent_title"
                tools:layout_editor_absoluteY="186dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="setStart"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addEvent_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEvent_start"
                    app:layout_constraintBottom_toTopOf="@+id/addEvent_endDate"
                    app:layout_constraintEnd_toEndOf="@+id/addEvent_allDay"
                    app:layout_constraintStart_toEndOf="@+id/addEvent_endTime"
                    app:layout_constraintTop_toBottomOf="@+id/addEvent_allDay" />

                <TextView
                    android:id="@+id/addEvent_startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEvent_startDate"
                    app:layout_constraintBottom_toTopOf="@+id/addEvent_location"
                    app:layout_constraintEnd_toStartOf="@+id/addEvent_endDate"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/addEvent_startTime"
                    app:layout_constraintTop_toBottomOf="@+id/addEvent_endTime"
                    android:onClick="setStartDate"/>

                <TextView
                    android:id="@+id/addEvent_startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEvent_startTime"
                    app:layout_constraintBottom_toTopOf="@+id/addEvent_location"
                    app:layout_constraintEnd_toStartOf="@+id/addEvent_startDate"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/addEvent_end"
                    app:layout_constraintTop_toBottomOf="@+id/addEvent_end"
                    android:onClick="setStartTime"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addEvent_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEvent_end"
                    app:layout_constraintBottom_toTopOf="@+id/addEvent_startTime"
                    app:layout_constraintEnd_toStartOf="@+id/addEvent_endTime"
                    app:layout_constraintStart_toStartOf="@+id/addEvent_allDay"
                    app:layout_constraintTop_toBottomOf="@+id/addEvent_allDay" />

                <TextView
                    android:id="@+id/addEvent_endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEvent_endDate"
                    app:layout_constraintBottom_toTopOf="@+id/addEvent_location"
                    app:layout_constraintEnd_toEndOf="@+id/addEvent_start"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/addEvent_startDate"
                    app:layout_constraintTop_toBottomOf="@+id/addEvent_start"
                    android:onClick="setEndDate"/>

                <TextView
                    android:id="@+id/addEvent_endTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addEvent_endTime"
                    app:layout_constraintBottom_toTopOf="@+id/addEvent_startDate"
                    app:layout_constraintEnd_toStartOf="@+id/addEvent_start"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/addEvent_end"
                    app:layout_constraintTop_toBottomOf="@+id/addEvent_allDay"
                    android:onClick="setEndTime"/>
            </LinearLayout>

            <EditText
                android:id="@+id/addEvent_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:hint="@string/addEvent_location"
                app:layout_constraintBottom_toTopOf="@+id/addEvent_notes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/addEvent_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/addEvent_notes"
                app:layout_constraintBottom_toTopOf="@+id/addEvent_busy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/addEvent_busy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/addEvent_busy"
                app:layout_constraintBottom_toTopOf="@+id/addEvent_add"
                app:layout_constraintEnd_toEndOf="@+id/addEvent_notes"
                app:layout_constraintStart_toStartOf="@+id/addEvent_notes" />

            <Button
                android:id="@+id/addEvent_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/addEvent_add"
                android:onClick="addEvent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/addEvent_busy" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>